# OS_Coursework

./: CMakeLists.txt  README.md  class hierarchy  main.cpp
include/: MyDialog.h  SSbutton.h  TextInputField.h  button.h  dropdownlist.h  radiobutton.h  text.h  widget.h  window.h
src/: MyDialog.cpp  SSbutton.cpp  TextInputField.cpp  button.cpp  dropdownlist.cpp  radiobutton.cpp  text.cpp  widget.cpp  window.cpp
